cluster/apps/vpn/wstunnel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wstunnel-ingress
  namespace: vpn
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "external"
  rules:
    - host: "wg.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wstunnel-svc
                port:
                  number: 48513
  tls:
    - hosts:
        - "wg.${SECRET_DOMAIN}"
  #      secretName: wstunnel-tls
